<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{433861fb-7e18-43dc-9d9e-404d2489a7b8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	// HMI State ON/OFF
	HMI_State_ON_OFF				: BOOL;
	
	// HMI Variable Global Heading
	HMI_Heading						: ARRAY[0..2] OF INT;
	
	// HMI Variable Prep
	HMI_Prep_Name_Display			: ARRAY[0..7] OF STRING;
	HMI_Prep_Name_Input				: ARRAY[0..3] OF STRING;
	HMI_Prep_Name_IO				: ARRAY[0..3] OF STRING;
	
	HMI_Prep_Display_Var			: ARRAY[0..7] OF INT;
	HMI_Prep_Input_Var				: ARRAY[0..3] OF INT;
	HMI_Prep_IO_Var					: ARRAY[0..3] OF BOOL;
	
	// HMI Variable Rinse
	HMI_Rinse_Name_Display			: ARRAY[0..7] OF STRING;
	HMI_Rinse_Name_Input				: ARRAY[0..3] OF STRING;
	HMI_Rinse_Name_IO				: ARRAY[0..3] OF STRING;
	
	HMI_Rinse_Display_Var			: ARRAY[0..7] OF INT;
	HMI_Rinse_Input_Var				: ARRAY[0..3] OF INT;
	HMI_Rinse_IO_Var				: ARRAY[0..3] OF BOOL;
	
	// HMI Variable Dialys
	HMI_Dialys_Name_Display			: ARRAY[0..7] OF STRING;
	HMI_Dialys_Name_Input			: ARRAY[0..3] OF STRING;
	HMI_Dialys_Name_IO				: ARRAY[0..3] OF STRING;
	
	HMI_Dialys_Display_Var			: ARRAY[0..7] OF INT;
	HMI_Dialys_Input_Var			: ARRAY[0..3] OF INT;
	HMI_Dialys_IO_Var				: ARRAY[0..3] OF BOOL;
	
	// HMI Variable Global Declaration
	
	HMI_Button_Valve				: ARRAY[0..31] OF BOOL;
	HMI_Display_Int					: ARRAY[0..31] OF INT;
	HMI_Display_Lamp				: ARRAY[0..31] OF BOOL;

	HMI_Motor_Peristaltik_Input 	: INT;
	HMI_Motor_Peristaltik_Real		: INT;
	
	HMI_Motor_DAC_1_Input			: INT;
	HMI_Motor_DAC_1_Real			: INT;
	
	HMI_Motor_DAC_2_Input			: INT;
	HMI_Motor_DAC_2_Real			: INT;
	
	HMI_Motor_Pump_1_Input			: INT;
	HMI_Motor_Pump_1_Real			: INT;
	
	HMI_Motor_Pump_2_Input			: INT;
	HMI_Motor_Pump_2_Real			: INT;
	
	HMI_Motor_Pump_3_Input			: INT;
	HMI_Motor_Pump_3_Real			: INT;
	
	HMI_Motor_Stepper_Input			: INT;
	HMI_Motor_Stepper_Real			: INT;
	HMI_Motor_Stepper_Injec_Stat	: BOOL;
	HMI_Motor_Stepper_Zero_Pos		: BOOL;
	
	HMI_Number_Display				: ARRAY[0..31] OF INT;
	
	//HMI Variable for Maintenance
	
	HMI_Maintenance_H				: BOOL;	
	HMI_Maintenance_P1				: BOOL;	
	HMI_Maintenance_P2				: BOOL;	
	HMI_Maintenance_P3				: BOOL;	
	HMI_Maintenance_P4				: BOOL;	
	
	HMI_Maintenance_V1				: BOOL;	
	HMI_Maintenance_V4				: BOOL;	
	HMI_Maintenance_V5A				: BOOL;	
	HMI_Maintenance_V5B				: BOOL;	
	HMI_Maintenance_V6A				: BOOL;	
	HMI_Maintenance_V6B				: BOOL;	
	HMI_Maintenance_V7A				: BOOL;	
	HMI_Maintenance_V7B				: BOOL;	
	HMI_Maintenance_V8A				: BOOL;	
	HMI_Maintenance_V8B				: BOOL;	
	HMI_Maintenance_V9A				: BOOL;	
	HMI_Maintenance_V9B				: BOOL;

	HMI_Maintenance_V10				: BOOL; 
	HMI_Maintenance_V11				: BOOL;
	HMI_Maintenance_V12				: BOOL;
	HMI_Maintenance_V17				: BOOL;
	HMI_Maintenance_V19				: BOOL;
	HMI_Maintenance_V21				: BOOL;
	HMI_Maintenance_V24				: BOOL;
	HMI_Maintenance_V27				: BOOL;
	HMI_Maintenance_V28				: BOOL;
	HMI_Maintenance_V29				: BOOL;
	HMI_Maintenance_V30				: BOOL;
	HMI_Maintenance_V31				: BOOL;
	
	HMI_Maintenance_V33				: BOOL;	
	HMI_Maintenance_V34				: BOOL;
	HMI_Maintenance_V35				: BOOL;
	HMI_Maintenance_V43				: BOOL;
	HMI_Maintenance_V45				: BOOL;
	HMI_Maintenance_V46				: BOOL;
	HMI_Maintenance_V55				: BOOL;
	HMI_Maintenance_V56				: BOOL;
	HMI_Maintenance_V57				: BOOL;
	
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>